--- a/public_html/modules/custom/zoho_custom_campaign/zoho_custom_campaign.services.yml
+++ b/public_html/modules/custom/zoho_custom_campaign/zoho_custom_campaign.services.yml
@@ -1,7 +1,8 @@
 services:
   zoho_custom_campaign.api_service:
     class: Drupal\zoho_custom_campaign\Service\ApiService
-    arguments: ["@http_client", "@config.factory", "@logger.factory"]
+    arguments:
+      ["@http_client", "@logger.factory", "@zoho_custom_campaign.oauth"]
 
   zoho_custom_campaign.oauth:
     class: Drupal\zoho_custom_campaign\Service\OAuth
